src/test/errors/type_imbue.j
class Main {

Void main(Int i, Int a, Int b,Int d){
    Int j;
    i = "abc";
    j = true;
    (new A()).a = "ghi";
}
}
class A {
    Int a;
}